# Arawn

./: .gitignore  CMakeLists.txt  README.md
cfg/: settings.json
configs/: settings.json
doc/: render_configurations.txt
docs/: lighting_models.txt  render_configurations.txt  vscode_old_tasks.txt
inc/: attachments.h  buffer.h  camera.h  controller.h  dispatcher.h  engine.h  events.h  input.h  json.h  material.h  model.h  renderer.h  settings.h  swapchain.h  texture.h  uniform.h  vertex.h  vulkan.h  window.h
inc/core/: settings.h
inc/core/pass/: forward.h
inc/core/primitive/: vertex.h
inc/core/settings/: display.h  render.h
inc/geometry/: math.h
inc/graphics/: engine.h  renderer.h  swapchain.h  vulkan.h  window.h
inc/graphics/resources/: buffer.h  image.h  program.h
inc/graphics/vk/assets/: material.h  texture.h  uniform.h
inc/pass/: culling.h  deferred.h  depth.h  forward.h
inc/platform/: events.h  window.h
inc/scene/: camera.h  scene.h
inc/util/: dispatcher.h  json.h
res/logs/: results.csv
res/shader/: cluster.comp  deferred.frag  empty.frag  forward.frag  present.frag  present_ms.frag  present_msaa.frag  tile.comp  tile_culling.comp  transform.vert  transform_basic.vert
res/shader/cull/: clustered.comp  frustum.comp  tiled.comp  tiled_ms.comp
res/shader/deferred/: clustered.frag  clustered_ms.frag  geometry.frag  present.frag  present_ms.frag  tiled.frag  tiled_ms.frag
res/shader/forward/: clustered.frag  standard.frag  tiled.frag
res/shader/transform/: basic.vert  fullscreen.vert  tbn.vert
res/shaders/: def.frag  def.vert  depth.vert  forward.frag  forward.vert  fullscreen.vert  present.frag  present.vert
src/: attachments.cpp  buffer.cpp  camera.cpp  controller.cpp  engine.cpp  json.cpp  main.cpp  material.cpp  model.cpp  renderer.cpp  scene.cpp  settings.cpp  swapchain.cpp  texture.cpp  uniform.cpp  window.cpp
src/core/: settings.cpp
src/core/settings/: display.cpp  render.cpp
src/graphics/: engine.cpp  swapchain.cpp  window.cpp
src/graphics/resources/: buffer.cpp  image.cpp  program.cpp
src/graphics/vk/: swapchain.cpp
src/graphics/vk/assets/: buffer.cpp  material.cpp
src/pass/: culling.cpp  deferred.cpp  depth.cpp  forward.cpp
src/scene/: camera.cpp
src/util/: json.cpp
